<resources>
    <string name="app_name">Obesenec</string>
    <string name="title">BESENEC</string>
    <!-- Strings used for fragments for navigation -->
    <string name="play_buttoon">HRAJ</string>
    <string name="skore_button">SKÓRE</string>
    <string name="top10">TOP 10 HRÁČOV</string>
    <string name="historyScore"> HISTÓRIA SKÓRE</string>
    <string name="umiestnenie"> Um.</string>
    <string name="date"> Dátum</string>
    <string name="login"> Prihláste sa prosím</string>
    <string name="settings"> Nastavenia</string>
    <string name="name"> Meno</string>
    <string name="score"> Skóre</string>
    <string name="gameScore"> skóre:</string>
    <string name="historyPlayer"> Hráč:</string>
    <string name="enterYourName"> Zadaj svoje meno</string>
    <string name="difficulty"> Vyber si obtiažnosť</string>
    <string name="easy"> Ľahká</string>
    <string name="medium"> Stredná</string>
    <string name="hard"> Ťažká</string>
    <string name="menu"> Menu</string>
    <string name="home"> Domov</string>
    <string name="history"> História</string>
    <string name="feedback"> Spätná väzba</string>
    <string name="yourFeedback"> Vaša spätná väzba</string>
    <string name="submit"> Odošli</string>
    <string name="endText">tvoje výsledné skóre bolo:</string>
    <string name="competLoss">Prehral si, hladane slovo bolo</string>
    <string name="nonCompetLoss">Nepodarilo sa ti uhádnuť správne slovo, skús to znova</string>
    <string name="diff">Obtiažnosť</string>
    <string name="animals">Zvieratá</string>
    <string name="cities">Hlavné mestá</string>
    <string name="food">Potraviny</string>
    <string name="currLang">Jazyk: </string>
    <string name="language">Jazyk</string>
    <string name="background">Výber pozadia</string>
    <string name="welcome">Vitaj</string>
    <string name="powerUpMenuTutorial">Toto tlačidlo otvorí menu vylepšení</string>
    <string name="powerUpTimeTutorial">Vylepšenie ktoré pozastaví časomieru na 10 sekúnd</string>
    <string name="powerUpShowTutorial">Vylepšenie ktoré za vás doplní jedno alebo viacero rovnakých písmen ktoré sa nachádzajú v slove</string>
    <string name="powerUpLivesTutorial">Vylepšenie ktoré vám pridá 1 život</string>
    <string name="hangmanImageTutorial">Tu sa ukazuje vizuálny priebeh vášho obesenca</string>
    <string name="livesImageTutorial">Počet aktuálnych životov</string>
    <string name="timerTutorial">Zostávajúci čas</string>
    <string name="scoreTutorial">Zobrazenie vášho aktuálneho skóre</string>
    <string name="wordTutorial">Tu sa zobrazuje priebeh hľadaného slova</string>
    <string name="submitTutorial">Pomocou podobných tlačidiel budete mať možnosť hádať písmená</string>
    <string name="logout">Odhlásiť sa</string>
    <string name="anim">Animácie</string>
    <string name="word">Slovo ?</string>
    <string name="level">Úroveň: </string>
    <string name="levelMenu">ÚROVEŇ </string>
    <string name="interactiveTutorial">Interaktívny tutoriál</string>
    <string name="wordsLang">Jazyk slov:</string>
    <string name="categ">Kategória</string>
    <string name="svk">Slovenské slová</string>
    <string name="en">Anglické slová</string>
    <string name="chooseWordLang">Jazyk slov</string>
    <string name="playAgain">Hrať znova</string>
    <string name="allWordsFound">Gratulujem, práve si uhádol posledné slovo v tejto kategórii. Ak chceš hrať ďalej, vyber si inú kategóriu</string>


</resources>