<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/backButton"
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/arrow" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/menu"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="128dp"
                android:layout_marginEnd="16dp"
                android:hint="Mode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/menu_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:text="@string/diff" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/easyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/buttony"
                android:elevation="20dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/easy"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/buttony"
                android:elevation="20dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/play_buttoon"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:visibility="invisible"
                app:cornerRadius="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/infoTextView" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mediumButon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/buttony"
                android:elevation="20dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/medium"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/easyButton" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/hardButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/buttony"
                android:elevation="20dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/hard"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:cornerRadius="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mediumButon" />

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:fontFamily="@font/fredoka"
                android:text="@string/difficulty"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/menu" />

        <!--    <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="165dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameInputText"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:fontFamily="@font/fredoka"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>